--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Titanic II: A Statistic\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Predicting Chance of Survival for Titanic Passangers\n",
     "<b>Given a person's...</b>\n",
     "- socioeconomic status\n",
@@ -535,10 +542,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From the data analysis, we inferred that...\n",
+    "From above graphs, we inferred that...\n",
     "\n",
     "- Chance of death is correlated to socioeconomic class\n",
-    "- Men are more likely to die\n",
+    "- Men are more likely to die than women\n",
     "- The ages for the ranges 0-18, 18-35, 35 and above exhibited similar patterns\n",
     "- If you embarked at Southampton, then you were more likely to die\n",
     "- TODO: how did ticket price relate to chance of death?\n",
@@ -660,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -873,7 +880,7 @@
        "7                     0           0  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 59,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -890,7 +897,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -910,7 +917,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -934,7 +941,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -949,7 +956,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
@@ -975,7 +982,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -992,7 +999,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1003,9 +1010,9 @@
       "LinearSVC: \t[0.802469/0.964115]\n",
       "LogisticRegression: \t[0.810325/0.935407]\n",
       "DecisionTreeClassifier: \t[0.820426/0.873206]\n",
-      "RandomForestClassifier: \t[0.781145/0.741627]\n",
+      "RandomForestClassifier: \t[0.819304/0.834928]\n",
       "DecisionTree: \t[0.830527/0.885167]\n",
-      "DecisionForest: \t[0.829405/0.849282]\n"
+      "DecisionForest: \t[0.828283/0.882775]\n"
      ]
     }
    ],
@@ -1022,7 +1029,7 @@
     "    clf.fit(X_train, y_train)\n",
     "    print(\"%s: \\t[%f/%f]\" % (clf.__class__.__name__, clf.score(X_train, y_train), clf.score(X_test, y_test)) )\n",
     "    if isinstance(clf, DecisionTreeClassifier):\n",
-    "        sklearn.tree.export_graphviz(clf, out_file='tree.dot')"
+    "        sklearn.tree.export_graphviz(clf, out_file='tree1.dot')"
    ]
   },
   {
@@ -1100,19 +1107,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(1057, 14)\n",
-      "(252, 14)\n"
+      "(1054, 14)\n",
+      "(255, 14)\n"
      ]
     }
    ],
    "source": [
+    "# resample\n",
     "msk = np.random.rand(len(combined)) <= 0.8\n",
     "train = combined[msk]\n",
     "test = combined[~msk]\n",
@@ -1128,20 +1136,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SVC: \t[0.857143/0.845238]\n",
-      "LinearSVC: \t[0.857143/0.845238]\n",
-      "LogisticRegression: \t[0.857143/0.845238]\n",
-      "DecisionTreeClassifier: \t[0.860927/0.849206]\n",
-      "RandomForestClassifier: \t[0.770104/0.793651]\n",
-      "DecisionTree: \t[0.866604/0.861111]\n",
-      "DecisionForest: \t[0.867550/0.869048]\n"
+      "SVC: \t[0.860531/0.831373]\n",
+      "LinearSVC: \t[0.860531/0.831373]\n",
+      "LogisticRegression: \t[0.860531/0.831373]\n",
+      "DecisionTreeClassifier: \t[0.865275/0.831373]\n",
+      "RandomForestClassifier: \t[0.862429/0.831373]\n",
+      "DecisionTree: \t[0.873814/0.831373]\n",
+      "DecisionForest: \t[0.872865/0.835294]\n"
      ]
     }
    ],
@@ -1150,15 +1158,7 @@
     "    clf.fit(X_train, y_train)\n",
     "    print(\"%s: \\t[%f/%f]\" % (clf.__class__.__name__, clf.score(X_train, y_train), clf.score(X_test, y_test)) )\n",
     "    if isinstance(clf, DecisionTreeClassifier):\n",
-    "        sklearn.tree.export_graphviz(clf, out_file='tree.dot')"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Future Work\n",
-    "??"
+    "        sklearn.tree.export_graphviz(clf, out_file='tree2.dot')"
    ]
   }
  ],
